css/links.css
/* ... */
/*  Index page, and embeds thereof, do not need the G icon.
    NOTE: we do not use the usual method of suppressing G icons (`.icon-not` class), because /index and /static/404 are *so* long and routinely modified/expanded, so doing it 'manually' would risk occasional omissions or syntax errors.
 */
body.index a.link-page::after,
body.static-404 a.link-page::after,
.popframe-body.index a.link-page::after {
    content: none;
}

/*=----------------------------------------------------=*/
/*= Cross-directory links on tag index pages =*/
/*=----------------------------------------------------=*/

a[data-link-icon='arrow-up-left']::after,
a[data-link-icon='arrow-down-right']::after,
a[data-link-icon='arrow-right']::after {
    --link-icon-size: 0.65em;
    --link-icon-offset-x: 0.2em;
    --link-icon-offset-y: 0.3em;

    opacity: 0.8;
}
a[data-link-icon='arrow-up-left']:hover::after,
a[data-link-icon='arrow-down-right']:hover::after,
a[data-link-icon='arrow-right']:hover::after {
    opacity: 0.4;
}
a[data-link-icon='arrow-up-left'] { --link-icon-url: url('/static/img/icon/arrow-up-left.svg'); }
a[data-link-icon='arrow-down-right'] { --link-icon-url: url('/static/img/icon/arrow-down-right.svg'); }
a[data-link-icon='arrow-right'] { --link-icon-url: url('/static/img/icon/arrow-right.svg'); }

/*=-------------------------------=*/
/*= Textual per-domain link icons =*/
/*=-------------------------------=*/

/******************/
/*  Logotype icons.
    */

a[data-link-icon='𝛘']::after { /* Arxiv */
--link-icon-size: 0.7em;
    --link-icon-offset-x: 0.1em;
    --link-icon-offset-y: 0.6em;

    opacity: 0.7;
}

a[data-link-icon='❐']::after { /* Booru */
    --link-icon-size: 0.8em;
    --link-icon-offset-x: 0.15em;
    --link-icon-offset-y: 0.15em;
}

a[data-link-icon='⧖']::after { /* Longecity */
    --link-icon-size: 0.9em;
    --link-icon-offset-y: 0.1em;
    --link-icon-offset-x: 0.1em;

    opacity: 0.70;
}

a[data-link-icon='♡']::after { /* Fandom/Wikia */
    --link-icon-offset-x: 0.05em;

    opacity: 1.0;
    text-shadow: 0 0 0 currentcolor;
}

a[data-link-icon='MS']::after {
    --link-icon-size: 0.65em;
    --link-icon-offset-y: 0.35em;
}

a[data-link-icon='n']::after { /* Nature */
    --link-icon-size: 0.9em;
    --link-icon-offset-y: 0.3em;
    --link-icon-offset-x: 0.1em;

    opacity: 0.75;
}

a[data-link-icon='s']::after {
    --link-icon-size: 1em;
}

a[data-link-icon='Ss']::after {
    --link-icon-offset-x: 0.15em;
}

a[data-link-icon='Vox']::after {
    --link-icon-size: 0.75em;
    --link-icon-offset-x: 0.1em; /* shift left a bit */
}

a[data-link-icon='ψ']::after {
    --link-icon-offset-y: 0.4em;

    opacity: 0.75;
}

a[data-link-icon='ℵ']::after { /* Unsong ALEF */
    --link-icon-size: 0.8em;

    font-weight: normal;
}

a[data-link-icon='▅▇▃']::after {
    --link-icon-size: 0.5em;
    --link-icon-offset-x: 0.25em;

    margin-right: 0.15em;
    opacity: 0.7;
}

a[data-link-icon='▲']::after { /* Melting Asphalt (Kevin Simler) */
    --link-icon-offset-x: 0;
    --link-icon-offset-y: 0.25em;

    opacity: 0.75;
}

a[data-link-icon='𝔐']::after {
    --link-icon-size: 1em;
    opacity: 0.95;
}

a[data-link-icon='▽']::after { /* The Verge */
    --link-icon-size: 0.9em;
    opacity: 0.80;
}

a[data-link-icon='∇']::after { /* The Gradient.pub */
    --link-icon-size: 0.85em;

    opacity: 0.85;
}

a[data-link-icon='✉']::after {
    --link-icon-size: 1.1em;
    --link-icon-offset-x: 0.15em;
    --link-icon-offset-y: 0.05em;

    font-weight: normal;
    opacity: 0.95;
}

a[data-link-icon='M𝐑']::after {
    opacity: 0.75;
}

a[data-link-icon='𝐁']::after {
    opacity: 0.77;
}

a[data-link-icon='𝐌']::after {
    opacity: 0.7;
}

a[data-link-icon='𝛌']::after {
    --link-icon-size: 1em;

    opacity: 0.6;
}

a[data-link-icon='𝛘']::after {
    --link-icon-offset-y: 0.4em;

    opacity: 0.75;
}

a[data-link-icon='෴']::after { /* Moustache / antilop.cc */
    --link-icon-offset-y: 0.5em;

    opacity: 0.8;
}

a[data-link-icon='🤖']::after { /* ROBOT FACE U+1F916 beepb00p.xyz */
    --link-icon-size: 0.8em;
    --link-icon-offset-x: 0.15em;
    --link-icon-offset-y: 0.3em;

    opacity: 0.8;

    opacity: 0.75;
}

a[data-link-icon='GPP']::after { /* Game Programming Patterns: shrink & elevate */
    --link-icon-size: 0.6em;
    --link-icon-offset-y: 0.6em;
}

a[data-link-icon='⛨']::after { /* Cambridge */
    --link-icon-size: 0.9em;
    --link-icon-offset-x: 0.10em; /* NOTE: this may be too much for Chrome, but the FF needs it */
    --link-icon-offset-y: 0.10em;

    font-weight: normal;
}

a[data-link-icon='𝒩𝒴']::after { /* nymag.com New York Magazine */
    opacity: 0.7;
}

a[data-link-icon='𝕳']::after { /* NZ Herald */
    --link-icon-offset-y: 0.4em;

    opacity: 0.7;
}

a[data-link-icon='𝔐']::after { /* Daily Mail */
    --link-icon-size: 0.75em;
    --link-icon-offset-y: 0.5em;
}

a[data-link-icon='𝛌']::after { /* Haskell */
    --link-icon-size: 0.8em;
}

a[data-link-icon='𝓝']::after { /* Nintil */
    --link-icon-size: 0.8em;
}

a[data-link-icon='ρ']::after { /* Project Rho */
    --link-icon-size: 0.8em;
    --link-icon-offset-y: 0.5em;
    --link-icon-offset-x: 0.10em;

    opacity: 0.75;
}

/****************************/
/* Triple-letter 'tri' initials: too few for quad, but too big for
   regular font size/offset. Common with TLA orgs. */
a[data-link-icon-type*='tri']::after {
    --link-icon-size: 0.6em;
    --link-icon-offset-y: 0.6em;

    opacity: 0.90;
}

/****************************/
/*  Quad-letter 'quad' square icons.
    */
a[data-link-icon-type*='quad']::after {
    text-indent: 0;
    overflow-wrap: break-word;
    display: inline-block;
    text-align: center;
    left: 0;
    bottom: 0.3em;
    font-size: 0.52em;
    font-weight: bold;
    line-height: 0.8;
    width: 1.5em;
    opacity: 0.83;
}

/*  Quad-letter square icons in a sans face.
    */
a[data-link-icon-type*='quad'][data-link-icon-type*='sans']::after {
    margin: 0;
}
/* ... */

